Fix spacing issues

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -13,7 +13,5 @@
     --breakpoint-2xl: 1920px;
 }
 
-*{
-    box-sizing: border-box;
-}
+
 
